--- a/johnson.rmd
+++ b/johnson.rmd
@@ -20,4 +20,16 @@ $q$ is the prediction with CIs; $P=0.5$ represents 50% CIs, and `logq` is used t
 
 The log scale seems like the sensible one to use for incidece or peak size. We might use the untransformed scale for incidence; we might do something different for peak week, for example.
 
+The whole thing seems to work pretty well, but there are limitations:
+
+* the Johnson distribution is a simple, and natural, way to do this, but there are other options that might give different answers;
+
+* I could say exactly the same thing about the way I chose to _constrain_ the Johnson distribution 
+
+* assuming positivity and doing things on a log scale feels better for many epidemic predictions, but when things get near zero that gets a bit dicey. The classic trick of adding 1 to everything might be the best solution here, since 1 actually has a relevant meaning (it's a single discrete case, not something with units)
+
+Here are some sample distributions, generated on the linear scale. I held the 50% CI constant at (25, 400), and varied the median linearly between them.
+
+And here is a similar picture, generated on the log scale (with the median also varied on the log scale).
+
 Since $q$ is passed as a separate parameter, the easiest way to implement this on a data frame would probably be to use `plyr`. I'm happy to keep working on this, if there is interest.
