--- a/johnson.rmd
+++ b/johnson.rmd
@@ -18,6 +18,10 @@ print(jsqdens(obs=195, q=c(7, 40, 122), P=0.5, logq=TRUE))
 
 $q$ is the prediction with CIs; $P=0.5$ represents 50% CIs, and `logq` is used to do the calculation on the log scale.
 
+The density that is inferred in this example looks like this:
+
+![](johnson_test.Rout-2.png)
+
 The log scale seems like the sensible one to use for incidece or peak size. We might use the untransformed scale for incidence; we might do something different for peak week, for example.
 
 The whole thing seems to work pretty well, but there are limitations:
@@ -28,8 +32,12 @@ The whole thing seems to work pretty well, but there are limitations:
 
 * assuming positivity and doing things on a log scale feels better for many epidemic predictions, but when things get near zero that gets a bit dicey. The classic trick of adding 1 to everything might be the best solution here, since 1 actually has a relevant meaning (it's a single discrete case, not something with units)
 
-Here are some sample distributions, generated on the linear scale. I held the 50% CI constant at (25, 400), and varied the median linearly between them.
+Here are some sample distributions, generated on the linear scale. I used _90%_ CIs for this picture, I held constant at (25, 400), and varied the median linearly between them.
 
-And here is a similar picture, generated on the log scale (with the median also varied on the log scale).
+![](johnson_test.Rout-0.png)
+
+And here is a similar picture, generated on the log scale (with the median varied on the log scale).
+
+![](johnson_test.Rout-1.png)
 
 Since $q$ is passed as a separate parameter, the easiest way to implement this on a data frame would probably be to use `plyr`. I'm happy to keep working on this, if there is interest.
