Statements for promotion

--- a/research_statement.tex
+++ b/research_statement.tex
@@ -1,12 +1,12 @@
 \documentclass[12pt,a4paper]{article}
 
+\usepackage[top=2cm, bottom=2cm, left=3.5cm, right=3.5cm]{geometry}
+
 \begin{document}
 
 \newcommand{\one}[1]{\vspace{\baselineskip}\hspace{-\parindent}{\large \bf #1}}
 \newcommand{\two}[1]{\vspace{\baselineskip}\hspace{-\parindent}{\it #1}}
 \newcommand{\square}{\vspace{1.5ex}\noindent}
-
-% Hacked from fitpage.sty; do not re-use once we have real wiki file connections
 
 \thispagestyle{empty}
 
